# easy-ovpn

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/ovpnctl/: cli.py
